商品クリック後の遷移、ヘッダー・フッター追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,7 @@
  *= require_self
  */
 
-body {
-  background-image: image-url("IMG_2976-1200x900.jpg");}
+
+@import "bootstrap";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
