--- a/app/views/customers/estates/finish.html.erb
+++ b/app/views/customers/estates/finish.html.erb
@@ -1,2 +1,4 @@
-<h1>Customers::Estates#finish</h1>
-<p>Find me in app/views/customers/estates/finish.html.erb</p>
+<%= render "customers/customers/header" %>
+<h1>お問い合わせ</h1>
+<h1>ありがとうございました</h1>
+<%= render "customers/customers/footer" %>
