--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,12 @@
     <title>Techroom</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <li>
-      <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-    </li>
+  <body class="d-flex flex-column vh-100">
     <%= yield %>
   </body>
 </html>
