--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Customers::Estates#show</h1>
-<p>Find me in app/views/customers/estates/show.html.erb</p>
+<%= render "customers/customers/header" %>
+<%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "1500x800" %>
+  <div class="row">
+    <div class="col-md-11">
+      <div class="card">
+        <h2><%= @estate.name %></h2>
+        <%= @estate.info %>
+        <p>住所 <%= @estate.address %></p>
+        <p>間取り <%= @estate.floor %></p>
+        <p>賃料 ¥<%= @estate.price.to_s(:delimited) %></p>
+        <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "100x100" %>
+      </div>
+    </div>
+  </div>
+  
+<h3>お問い合わせ</h3>
+<%= attachment_image_tag @estate, :property_image, format: 'jpeg', size: "100x100" %>
+
+<%= render "customers/customers/footer" %>
