--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,5 +1,6 @@
-<h2>会員登録</h2>
+<%= render "customers/customers/header" %>
 
+<h2>会員登録</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
 
@@ -7,17 +8,14 @@
     <%= f.label :お名前 %><br />
     <%= f.text_field :name, autofocus: true, placeholder:"お名前" %>
   </div>
-
   <div class="field">
     <%= f.label :メールアドレス %><br />
     <%= f.email_field :email, placeholder:"メールアドレス" %>
   </div>
-
   <div class="field">
     <%= f.label :電話番号 %><br />
     <%= f.text_field :phone_number, placeholder:"電話番号" %>
   </div>
-
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -25,15 +23,14 @@
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password", placeholder:"パスワード" %>
   </div>
-
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"パスワード（確認）" %>
   </div>
-
   <div class="actions">
     <%= f.submit "登録" %>
   </div>
 <% end %>
 
 <%= render "customers/shared/links" %>
+<%= render "customers/customers/footer" %>
