--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -25,7 +25,7 @@
       </div>
     </div>
   <% end %>
-</div
+</div>
 <%= link_to "一覧ページへ進む", admins_estates_path %>
 
 <%= render "admins/customers/footer" %>
