--- a/app/views/customers/customers/_header.html.erb
+++ b/app/views/customers/customers/_header.html.erb
@@ -1,29 +1,27 @@
 <header class="shadow-sm">
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
-      <a class="navbar-brand p-3" href="/"><%= image_tag('logo.jpg') %></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-        <% if customer_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "マイページ", customers_path %>｜
-        </li>
-        <li class="nav-item">
-          <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-        </li>
-        <% else %>
-        <li class="nav-item">
-          <%= link_to "サインアップ", new_customer_registration_path %>｜
-        </li>
-        <li class="nav-item">
-          <%= link_to "ログイン", new_customer_session_path %>
-        </li>
-        <% end %>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-xs navbar-light">
+    <a class="navbar-brand p-0" href="/"><%= image_tag('logo.jpg') %></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+      <% if customer_signed_in? %>
+      <li class="nav-item">
+        <%= link_to "マイページ", customers_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+      </li>
+      <% else %>
+      <li class="nav-item">
+        <%= link_to "サインアップ", new_customer_registration_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "ログイン", new_customer_session_path %>
+      </li>
+      <% end %>
+      </ul>
     </div>
   </nav>
 </header>
