--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -9,10 +9,23 @@
         <p>間取り <%= @estate.floor %></p>
         <p>賃料 ¥<%= @estate.price.to_s(:delimited) %></p>
         <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "100x100" %>
+        <% if @estate.favorited_by?(current_customer) %>
+          <p>
+            <%= link_to estate_favorites_path(@estate), method: :delete do %>
+             ★<%= @estate.favorites.count %>
+            <% end %>
+          </p>
+        <% else %>
+              <p>
+               <%= link_to estate_favorites_path(@estate), method: :post do %>
+                 ☆<%= @estate.favorites.count %>
+               <% end %>
+              </p>
+        <% end %>
       </div>
     </div>
   </div>
-  
+
 <h3>お問い合わせ</h3>
 <%= attachment_image_tag @estate, :property_image, format: 'jpeg', size: "100x100" %>
 
