--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -1,27 +1,28 @@
 <%= render "customers/customers/header" %>
 <h2>マイページ編集</h2>
 <div class="row-2">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "customers/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "customers/shared/error_messages", resource: resource %>
 
-  <div class="col-12">
-    <div class="card">
-      <div class="field">
-        <%= f.label :お名前 %><br />
-        <%= f.text_field :name %>
+    <div class="col-12">
+      <div class="card">
+        <div class="field">
+          <%= f.label :お名前 %><br />
+          <%= f.text_field :name %>
+        </div>
+        <div class="field">
+          <%= f.label :メールアドレス %><br />
+          <%= f.email_field :email %>
+        </div>
+        <div class="field">
+          <%= f.label :電話番号 %><br />
+          <%= f.text_field :phone_number %>
+        </div>
+        <div class="actions">
+          <%= f.submit "保存" %>
+        </div>
       </div>
-    <div class="field">
-      <%= f.label :メールアドレス %><br />
-      <%= f.email_field :email %>
     </div>
-    <div class="field">
-      <%= f.label :電話番号 %><br />
-      <%= f.text_field :phone_number %>
-    </div>
-    <div class="actions">
-      <%= f.submit "編集" %>
-    </div>
-  </div>
   <% end %>
 </div>
 <%= link_to "Back", :back %>
