.envファイル消えていたので追加

--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -19,8 +19,34 @@
         <%= f.text_field :price, placeholder: "賃料" %><br/>
         <h5><%= f.label :間取り図画像 %></h5>
         <%= f.attachment_field :floor_image %><br/>
-        <h5><%= f.label :物件画像 %></h5>
-        <%= f.attachment_field :property_image %><br/>
+        <h5><%= f.label :物件画像１ %></h5>
+        <%= f.attachment_field :property_image_a %><br/>
+        <h5><%= f.label :物件画像２ %></h5>
+        <%= f.attachment_field :property_image_b %><br/>
+        <h5><%= f.label :物件画像３ %></h5>
+        <%= f.attachment_field :property_image_c %><br/>
+        <h5><%= f.label :物件画像４ %></h5>
+        <%= f.attachment_field :property_image_d %><br/>
+        <h5><%= f.label :物件画像５ %></h5>
+        <%= f.attachment_field :property_image_e %><br/>
+        <h5><%= f.label :物件画像６ %></h5>
+        <%= f.attachment_field :property_image_f %><br/>
+        <h5><%= f.label :物件画像７ %></h5>
+        <%= f.attachment_field :property_image_g %><br/>
+        <h5><%= f.label :物件画像８ %></h5>
+        <%= f.attachment_field :property_image_h %><br/>
+        <h5><%= f.label :物件画像９%></h5>
+        <%= f.attachment_field :property_image_j %><br/>
+        <h5><%= f.label :物件画像１０ %></h5>
+        <%= f.attachment_field :property_image_k %><br/>
+        <h5><%= f.label :物件画像１１ %></h5>
+        <%= f.attachment_field :property_image_l %><br/>
+        <h5><%= f.label :物件画像１２ %></h5>
+        <%= f.attachment_field :property_image_m %><br/>
+        <h5><%= f.label :物件画像１３ %></h5>
+        <%= f.attachment_field :property_image_n %><br/>
+        <h5><%= f.label :物件画像１４ %></h5>
+        <%= f.attachment_field :property_image_o %><br/>
         <%= f.submit "入稿する" %>
       </div>
     </div>
