--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -26,7 +26,169 @@
     </div>
   </div>
 
-<h3>お問い合わせ</h3>
-<%= attachment_image_tag @estate, :property_image, format: 'jpeg', size: "100x100" %>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">お問い合わせ</button>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">お問い合わせ</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <%= link_to "お問い合わせする" %>
+      </div>
+      <p>お問合せするにはログインが必要です。<br/>
+      会員登録済みの方はログインへ→</p>
+      <div class="login right">
+        <button type="button" class="btn btn-secondary"><%= link_to "ログイン", new_customer_session_path %></button>
+      </div>
+      <p>お問合せするには会員登録が必要です。<br/>
+      会員登録をする方は会員登録へ→</p>
+      <div class="registration">
+        <button type="button" class="btn btn-secondary"><%= link_to "会員登録", new_customer_registration_path %></button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-1">
+  <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-2">
+  <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-3">
+  <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-4">
+  <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-5">
+  <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-6">
+  <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-7">
+  <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-8">
+  <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-9">
+  <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-10">
+  <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-10" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-11">
+  <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-11" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-12">
+  <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-12" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-13">
+  <%= attachment_image_tag @estate, :property_image_m, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-13" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_m, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-14">
+  <%= attachment_image_tag @estate, :property_image_n, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-14" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_n, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
+
+<button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-15">
+  <%= attachment_image_tag @estate, :property_image_o, format: 'jpeg', size: "400x400" %>
+</button>
+<div class="modal fade text-center m-3" id="myModal-15" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= attachment_image_tag @estate, :property_image_o, format: 'jpeg', size: "1300x650" %>
+  <div class="modal-dialog" role="document"></div>
+  <button type="button" class="btn btn-default" data-dismiss="modal">[ X ]</button>
+</div>
 
 <%= render "customers/customers/footer" %>
+
