お問合わせフォーム追加

--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -10,7 +10,7 @@
         <h5><%= f.label :物件名 %></h5>
         <%= f.text_field :name, placeholder:"物件名" %><br/>
         <h5><%= f.label :物件概要 %></h5>
-        <%= f.text_field :info, class: "form-control-sm", :size=>"100x100", placeholder: "物件概要" %><br/>
+        <%= f.text_field :info, :size=>"100x100", placeholder: "物件概要" %><br/>
         <h5><%= f.label :物件住所 %></h5>
         <%= f.text_field :address, placeholder: "物件住所" %><br/>
         <h5><%= f.label :物件間取り %></h5>
