--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -25,34 +25,7 @@
       </div>
     </div>
   </div>
-
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">お問い合わせ</button>
-
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">お問い合わせ</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <%= link_to "お問い合わせする" %>
-      </div>
-      <p>お問合せするにはログインが必要です。<br/>
-      会員登録済みの方はログインへ→</p>
-      <div class="login right">
-        <button type="button" class="btn btn-secondary"><%= link_to "ログイン", new_customer_session_path %></button>
-      </div>
-      <p>お問合せするには会員登録が必要です。<br/>
-      会員登録をする方は会員登録へ→</p>
-      <div class="registration">
-        <button type="button" class="btn btn-secondary"><%= link_to "会員登録", new_customer_registration_path %></button>
-      </div>
-    </div>
-  </div>
-</div>
+  <%= link_to "お問い合わせする", new_estate_research_path(@estate) %>
 
 
 <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-1">
