--- a/app/views/admins/estates/edit.html.erb
+++ b/app/views/admins/estates/edit.html.erb
@@ -1,61 +1,61 @@
 <%= render "admins/customers/header" %>
 
 <h1>物件編集画面</h1>
-<div class="row-3">
-  <%= form_with model: @estate, url:admins_estate_path, local: true do |f| %>
-    <div class="col-12">
-      <div class="card">
-        <h5><%= f.label :サムネイル画像 %></h5>
-        <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :background_image %><br/>
-        <h5><%= f.label :物件名 %></h5>
-        <%= f.text_field :name %><br/>
-        <h5><%= f.label :物件概要 %></h5>
-        <%= f.text_field :info, class: "form-control-sm" %><br/>
-        <h5><%= f.label :物件住所 %></h5>
-        <%= f.text_field :address %><br/>
-        <h5><%= f.label :物件間取り %></h5>
-        <%= f.text_field :floor %><br/>
-        <h5><%= f.label :賃料 %></h5>
-        <%= f.text_field :price %><br/>
-        <h5><%= f.label :間取り図画像 %></h5>
-        <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :floor_image %><br/>
-        <h5><%= f.label :物件画像 %></h5>
-        <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_a %><br/>
-        <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_b %><br/>
-        <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_c %><br/>
-        <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_d %><br/>
-        <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_e %><br/>
-        <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_f %><br/>
-        <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_g %><br/>
-        <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_h %><br/>
-        <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_i %><br/>
-        <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_j %><br/>
-        <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_k %><br/>
-        <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_l %><br/>
-        <%= attachment_image_tag @estate, :property_image_m, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_m %><br/>
-        <%= attachment_image_tag @estate, :property_image_n, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_n %><br/>
-        <%= attachment_image_tag @estate, :property_image_o, format: 'jpeg', size: "100x100" %>
-        <%= f.attachment_field :property_image_o %><br/>
-        <%= f.submit "保存" %>
+<div class="container">
+  <div class="row-3">
+    <%= form_with model: @estate, url:admins_estate_path, local: true do |f| %>
+      <div class="col-12">
+        <div class="card">
+          <div class="card-body">
+            <h5><%= f.label :背景画像 %></h5>
+            <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :background_image %>
+            <h5><%= f.label :物件名 %>　<%= f.text_field :name, :size=>"93" %></h5>
+            <h5><%= f.label :部屋番号 %>　<%= f.number_field :room_number %></h5>
+            <h5><%= f.label :物件概要 %> <%= f.text_area :info, :size=>"100x10" %></h5>
+            <h5><%= f.label :住所 %>　<%= f.text_field :address, :size=>"95" %></h5>
+            <h5><%= f.label :間取り %>　<%= f.text_field :floor %></h5>
+            <h5><%= f.label :賃料 %>　<%= f.number_field :price %></h5>
+            <h5><%= f.label :間取り図画像 %></h5>
+            <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :floor_image %><br/>
+            <h5><%= f.label :物件画像 %></h5>
+            <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_a %><br/>
+            <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_b %><br/>
+            <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_c %><br/>
+            <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_d %><br/>
+            <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_e %><br/>
+            <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_f %><br/>
+            <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_g %><br/>
+            <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_h %><br/>
+            <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_i %><br/>
+            <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_j %><br/>
+            <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_k %><br/>
+            <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_l %><br/>
+            <%= attachment_image_tag @estate, :property_image_m, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_m %><br/>
+            <%= attachment_image_tag @estate, :property_image_n, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_n %><br/>
+            <%= attachment_image_tag @estate, :property_image_o, format: 'jpeg', size: "100x100" %>
+            <%= f.attachment_field :property_image_o %><br/>
+            <%= f.submit "保存" %>
+          </div>
+        </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
 
 <%= render "admins/customers/footer" %>
