--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -1,36 +1,58 @@
 <%= render "admins/customers/header" %>
 
-<h2>入稿した物件一覧</h2>
-<div class="row">
-  <% @estates.each do |estate| %>
-    <div class="col-11">
-      <div class="card">
-        <%= attachment_image_tag estate, :background_image, format: 'jpeg', size: "100x100" %>
-        <p>物件名 <%= estate.name %></p>
-        <p>住所 <%= estate.address %></p>
-        <p>間取り <%= estate.floor %></p>
-        <p>賃料 ¥<%= estate.price.to_s(:delimited) %></p>
-        <p><%= link_to "編集", edit_admins_estate_path(estate) %>
-        <p><%= link_to "削除", admins_estate_path(estate), method: :delete %></p>
-      </div>
-    </div>
-  <% end %>
-</div>
-<%= paginate @estates %>
+<h2>入稿物件一覧</h2>
+<div class="container">
+  <div class="row">
+    <% @estates.each do |estate| %>
+      <div class="col-11">
+        <div class="card">
+          <div class="card-body">
+            <%= attachment_image_tag estate, :background_image, format: 'jpeg', size: "100x100" %>
+            <h5>物件名：<%= estate.name %> <%= estate.room_number %>号室</h5>
+            <h5>住所：<%= estate.address %></h5>
+            <h5>間取り：<%= estate.floor %></h5>
+            <h5>賃料：¥<%= estate.price.to_s(:delimited) %></h5>
+            <h5>投稿日時：<%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></h5>
+            <h5>更新日時：<%= estate.updated_at.strftime('%Y年%m月%d日 %H時%M分') %></h5>
+            <h5><%= link_to "編集", edit_admins_estate_path(estate) %></h5>
+            <h5><%= link_to "削除", admins_estate_path(estate), method: :delete %></h5>
 
-<h2>ユーザー一覧</h2>
-<div class="row">
-  <% @customers.each do |customer| %>
-    <div class="col-11">
-      <div class="card">
-        <p>お名前 <%= customer.name %></p>
-        <p>メールアドレス <%= customer.email %></p>
-        <p>電話番号 <%= customer.phone_number %></p>
+            <h3>お問い合わせ一覧</h3>
+            <% estate.researches.each do |research| %>
+            <h5>ユーザー名：<%= research.customer.name %></h5>
+            <h5>メールアドレス：<%= research.customer.email %></h5>
+            <h5>電話番号：<%= research.customer.phone_number %></h5>
+            <h5>お問い合わせタイトル：<%= research.title %></h5>
+            <h5>お問合わせ本文：<%= research.body %></h5>
+            <h5>お問い合わせ日時：<%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></h5>
+            <% end %>
+          </div>
+        </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  <%#= paginate @customers %>
+  </div>
 </div>
-<%= paginate @customers %>
+
+
+<h2>カスタマー一覧</h2>
+<div class="container">
+  <div class="row">
+    <% @customers.each do |customer| %>
+      <div class="col-11">
+        <div class="card">
+          <div class="card-body">
+            <h5>お名前：<%= customer.name %></h5>
+            <h5>メールアドレス：<%= customer.email %></h5>
+            <h5>電話番号：<%= customer.phone_number %></h5>
+            <h5>会員登録された日時：<%= customer.created_at.strftime('%Y年%m月%d日 %H時%M分') %></h5>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+<%#= paginate @customers %>
 <%= link_to "物件入稿ページへ進む", new_admins_estate_path %>
 
 <%= render "admins/customers/footer" %>
