--- a/app/views/customers/estates/index.html.erb
+++ b/app/views/customers/estates/index.html.erb
@@ -1,28 +1,5 @@
 <%= render "customers/customers/header" %>
-<div class="row">
-  <% @estates.each do |estate| %>
-    <div class="col-md-4">
-      <div class="card">
-        <%=link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "454x200"), estate_path(estate) %><br/>
-        <%= estate.name %><br/>
-        <%= estate.floor %><br/>
-       ¥<%= estate.price.to_s(:delimited) %><br/>
-       <% if estate.favorited_by?(current_customer) %>
-         <p>
-           <%= link_to estate_favorites_path(estate), method: :delete do %>
-             ★<%= estate.favorites.count %>
-           <% end %>
-         </p>
-       <% else %>
-         <p>
-           <%= link_to estate_favorites_path(estate), method: :post do %>
-             ☆<%= estate.favorites.count %>
-           <% end %>
-         </p>
-       <% end %>
-      </div>
-    </div>
-  <% end %>
- </div>
-<%= paginate @estates %>
+<%= render "layouts/search" %>
+<%= render "customers/estates/article" %>
+<%#= paginate @estates %>
 <%= render "customers/customers/footer" %>
