--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -3,25 +3,28 @@
   <div class="row">
     <div class="col-md-11">
       <div class="card">
-        <h2><%= @estate.name %></h2>
-        <%= @estate.info %>
-        <p>住所 <%= @estate.address %></p>
-        <p>間取り <%= @estate.floor %></p>
-        <p>賃料 ¥<%= @estate.price.to_s(:delimited) %></p>
-        <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "100x100" %>
-        <% if @estate.favorited_by?(current_customer) %>
-          <p>
-            <%= link_to estate_favorites_path(@estate), method: :delete do %>
-             ★<%= @estate.favorites.count %>
-            <% end %>
-          </p>
-        <% else %>
-              <p>
-               <%= link_to estate_favorites_path(@estate), method: :post do %>
-                 ☆<%= @estate.favorites.count %>
-               <% end %>
-              </p>
-        <% end %>
+        <div class="card-body">
+          <h2><%= @estate.name %> <%= @estate.room_number %>号室</h2>
+          <%= @estate.info %>
+          <p>物件住所：<%= @estate.address %></p>
+          <p>間取り：<%= @estate.floor %></p>
+          <p>賃料：¥<%= @estate.price.to_s(:delimited) %></p>
+          <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "100x100" %>
+          <% if @estate.favorited_by?(current_customer) %>
+            <p>お気に入り：
+              <%= link_to estate_favorites_path(@estate), method: :delete do %>
+              ★<%= @estate.favorites.count %>
+              <% end %>
+            </p>
+          <% else %>
+            <p>お気に入り：
+              <%= link_to estate_favorites_path(@estate), method: :post do %>
+              ☆<%= @estate.favorites.count %>
+              <% end %>
+            </p>
+          <% end %>
+          <p>投稿日時：<%= @estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
+        </div>
       </div>
     </div>
   </div>
