--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -1,30 +1,5 @@
 <%= render "customers/customers/header" %>
+<%= render "layouts/search" %>
 <h1>新着物件一覧</h1>
-<div class="row">
-  <% @estates.each do |estate| %>
-  <div class="col-md-3">
-    <div class="card">
-      <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "333x200"), estate_path(estate) %><br/>
-      <div class="card-body">
-        <%= estate.name %><br/>
-        <%= estate.floor %><br/>
-        ¥<%= estate.price.to_s(:delimited) %><br/>
-        <% if estate.favorited_by?(current_customer) %>
-          <p>
-            <%= link_to estate_favorites_path(estate), method: :delete do %>
-            ★<%= estate.favorites.count %>
-            <% end %>
-          </p>
-        <% else %>
-          <p>
-            <%= link_to estate_favorites_path(estate), method: :post do %>
-            ☆<%= estate.favorites.count %>
-            <% end %>
-          </p>
-        <% end %>
-      </div>
-    </div>
-  </div>
-  <% end %>
-</div>
+<%= render "customers/estates/article" %>
 <%= render "customers/customers/footer" %>
