--- a/app/views/customers/estates/index.html.erb
+++ b/app/views/customers/estates/index.html.erb
@@ -1,5 +1,4 @@
 <%= render "customers/customers/header" %>
-<%= render "layouts/search" %>
 <%= render "customers/estates/article" %>
-<%#= paginate @estates %>
+<%= paginate @estates %>
 <%= render "customers/customers/footer" %>
