--- a/app/views/admins/customers/_header.html.erb
+++ b/app/views/admins/customers/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="shadow-sm">
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-xs navbar-light">
     <div class="container">
       <a class="navbar-brand p-3" href="/"><%= image_tag('logo.jpg') %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,6 +10,12 @@
         <% if admin_signed_in? %>
         <li class="nav-item">
           <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "物件入稿ページへ進む", new_admins_estate_path %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "一覧ページへ進む", admins_estates_path %>
         </li>
         <% end %>
         </ul>
