--- a/app/views/customers/customers/_footer.html.erb
+++ b/app/views/customers/customers/_footer.html.erb
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <%= link_to "トップ", root_path %>｜
+            <%= link_to "トップ", root_path, data: {"turbolinks" => false} %>｜
           </li>
           <li class="nav-item">
             <%= link_to "物件一覧", estates_path %>
