--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -8,16 +8,12 @@
       <div class="card">
         <div class="card-body">
           <div class="field">
-            <%= f.label :お名前 %><br />
-            <%= f.text_field :name %>
+            <p><%= f.label :お名前 %>　<%= f.text_field :name %></p>
           </div>
           <div class="field">
-            <%= f.label :メールアドレス %><br />
-            <%= f.email_field :email %>
-          </div>
+            <p><%= f.label :メールアドレス %>　<%= f.email_field :email %></p>
           <div class="field">
-            <%= f.label :電話番号 %><br />
-            <%= f.text_field :phone_number %>
+            <p><%= f.label :電話番号 %>　<%= f.text_field :phone_number %></p>
           </div>
           <div class="actions">
             <%= f.submit "保存" %>
