--- a/app/views/customers/customers/_footer.html.erb
+++ b/app/views/customers/customers/_footer.html.erb
@@ -1,19 +1,18 @@
-<footer class="">
+<footer>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
-      <a class="navbar-brand p-0" href="/"><%= image_tag('logo.jpg') %></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <%= link_to "トップ", root_path, data: {"turbolinks" => false} %>｜
-          </li>
-          <li class="nav-item">
-            <%= link_to "物件一覧", estates_path %>
-          </li>
-      </div>
+    <a class="navbar-brand" style="padding: 20px 0 20px 0" href="/"><%= image_tag('logo.jpg') %></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <%= link_to "トップ", root_path, data: {"turbolinks" => false}, class: "btn-sm btn-outline-light", :style=>"font-size: 20px; text-decoration: none;" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "物件一覧", estates_path, class: "btn-sm btn-outline-light", :style=>"font-size: 20px; text-decoration: none;" %>
+        </li>
+      </ul>
     </div>
   </nav>
 </footer>
