--- a/app/views/customers/customers/_header.html.erb
+++ b/app/views/customers/customers/_header.html.erb
@@ -1,8 +1,8 @@
 <header class="shadow-sm">
   <nav class="navbar navbar-expand-xs navbar-light">
-    <a class="navbar-brand p-0" href="/"><%= image_tag('logo.jpg') %></a>
+    <a class="navbar-brand p-0" href="/"><%= image_tag('logo1.jpg') %></a>
     <%= render "layouts/search" %>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
