--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -1,187 +1,96 @@
-<%= render "customers/customers/header" %>
-<%= render "layouts/search" %>
-<%#= render "customers/estates/article" %>
-<h1>新着物件一覧</h1>
-
-<div class="container my-3">
-<div id="example-2" class="carousel slide" data-ride="carousel" style="width:400px">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <div class="col-md-4" style="float:left">
-          <div class="card mb-2">
-            <img class="card-img-top">
-              <%= link_to attachment_image_tag(@estates.first, :background_image, format: 'jpeg', size: "333x200"), estate_path(@estates.first) %>
-            </img>
-            <div class="card-body">
-              <h4 class="card-title"><%= @estates.first.name %> <%= @estates.first.room_number %>号室</h4>
-              <p>住所：<%= @estates.first.address %></p>
-              <p>間取り：<%= @estates.first.floor %></p>
-              <p>賃料：¥<%= @estates.first.price.to_s(:delimited) %></p>
-              <% if @estates.first.favorited_by?(current_customer) %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.first), method: :delete do %>
-                  ★<%= @estates.first.favorites.count %>
-                  <% end %>
-                </p>
-              <% else %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.first), method: :post do %>
-                  ☆<%= @estates.first.favorites.count %>
-                  <% end %>
-                </p>
-              <% end %>
-              <p>投稿日時：<%= @estates.first.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" style="float:left">
-          <div class="card mb-2">
-            <img class="card-img-top">
-              <%= link_to attachment_image_tag(@estates.second, :background_image, format: 'jpeg', size: "333x200"), estate_path(@estates.second) %>
-            </img>
-            <div class="card-body">
-              <h4 class="card-title"><%= @estates.second.name %> <%= @estates.second.room_number %>号室</h4>
-              <p>住所：<%= @estates.second.address %></p>
-              <p>間取り：<%= @estates.second.floor %></p>
-              <p>賃料：¥<%= @estates.second.price.to_s(:delimited) %></p>
-              <% if @estates.second.favorited_by?(current_customer) %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.second), method: :delete do %>
-                  ★<%= @estates.second.favorites.count %>
-                  <% end %>
-                </p>
-              <% else %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.second), method: :post do %>
-                  ☆<%= @estates.second.favorites.count %>
-                  <% end %>
-                </p>
-              <% end %>
-              <p>投稿日時：<%= @estates.second.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" style="float:left">
-          <div class="card mb-2">
-            <img class="card-img-top">
-              <%= link_to attachment_image_tag(@estates.third, :background_image, format: 'jpeg', size: "333x200"), estate_path(@estates.third) %>
-            </img>
-            <div class="card-body">
-              <h4 class="card-title"><%= @estates.third.name %> <%= @estates.third.room_number %>号室</h4>
-              <p>住所：<%= @estates.third.address %></p>
-              <p>間取り：<%= @estates.third.floor %></p>
-              <p>賃料：¥<%= @estates.third.price.to_s(:delimited) %></p>
-              <% if @estates.third.favorited_by?(current_customer) %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.third), method: :delete do %>
-                  ★<%= @estates.third.favorites.count %>
-                  <% end %>
-                </p>
-              <% else %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.third), method: :post do %>
-                  ☆<%= @estates.third.favorites.count %>
-                  <% end %>
-                </p>
-              <% end %>
-              <p>投稿日時：<%= @estates.third.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
-            </div>
-          </div>
-        </div>
-    </div>
-    <div class="carousel-item">
-      <div class="col-md-4" style="float:left">
-          <div class="card mb-2">
-            <img class="card-img-top">
-              <%= link_to attachment_image_tag(@estates.fourth, :background_image, format: 'jpeg', size: "333x200"), estate_path(@estates.fourth) %>
-            </img>
-            <div class="card-body">
-              <h4 class="card-title"><%= @estates.fourth.name %> <%= @estates.fourth.room_number %>号室</h4>
-              <p>住所：<%= @estates.fourth.address %></p>
-              <p>間取り：<%= @estates.fourth.floor %></p>
-              <p>賃料：¥<%= @estates.fourth.price.to_s(:delimited) %></p>
-              <% if @estates.fourth.favorited_by?(current_customer) %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.fourth), method: :delete do %>
-                  ★<%= @estates.fourth.favorites.count %>
-                  <% end %>
-                </p>
-              <% else %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.fourth), method: :post do %>
-                  ☆<%= @estates.fourth.favorites.count %>
-                  <% end %>
-                </p>
-              <% end %>
-              <p>投稿日時：<%= @estates.fourth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" style="float:left">
-          <div class="card mb-2">
-            <img class="card-img-top">
-              <%= link_to attachment_image_tag(@estates.fifth, :background_image, format: 'jpeg', size: "333x200"), estate_path(@estates.fifth) %>
-            </img>
-            <div class="card-body">
-              <h4 class="card-title"><%= @estates.fifth.name %> <%= @estates.fifth.room_number %>号室</h4>
-              <p>住所：<%= @estates.fifth.address %></p>
-              <p>間取り：<%= @estates.fifth.floor %></p>
-              <p>賃料：¥<%= @estates.fifth.price.to_s(:delimited) %></p>
-              <% if @estates.fifth.favorited_by?(current_customer) %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.fifth), method: :delete do %>
-                  ★<%= @estates.fifth.favorites.count %>
-                  <% end %>
-                </p>
-              <% else %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.fifth), method: :post do %>
-                  ☆<%= @estates.fifth.favorites.count %>
-                  <% end %>
-                </p>
-              <% end %>
-              <p>投稿日時：<%= @estates.fifth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4" style="float:left">
-          <div class="card mb-2">
-            <img class="card-img-top">
-              <%= link_to attachment_image_tag(@estates.sixth, :background_image, format: 'jpeg', size: "333x200"), estate_path(@estates.sixth) %>
-            </img>
-            <div class="card-body">
-              <h4 class="card-title"><%= @estates.sixth.name %> <%= @estates.sixth.room_number %>号室</h4>
-              <p>住所：<%= @estates.sixth.address %></p>
-              <p>間取り：<%= @estates.sixth.floor %></p>
-              <p>賃料：¥<%= @estates.sixth.price.to_s(:delimited) %></p>
-              <% if @estates.sixth.favorited_by?(current_customer) %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.sixth), method: :delete do %>
-                  ★<%= @estates.sixth.favorites.count %>
-                  <% end %>
-                </p>
-              <% else %>
-                <p>お気に入り：
-                  <%= link_to estate_favorites_path(@estates.sixth), method: :post do %>
-                  ☆<%= @estates.sixth.favorites.count %>
-                  <% end %>
-                </p>
-              <% end %>
-              <p>投稿日時：<%= @estates.sixth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></p>
-            </div>
-          </div>
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#example-2" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#example-2" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+<nav class="navbar navbar-expand-xs navbar-light">
+  <a class="navbar-brand justify-content-center" style="padding: 50px 0 0 520px;" href="/"><%= image_tag('logo1.jpg') %></a>
+  <button class="navbar-toggler" style="margin-bottom: 150px;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav">
+    <% if customer_signed_in? %>
+    <li class="nav-item">
+      <%= link_to "マイページ", customers_path %>
+    </li>
+    <li class="nav-item">
+      <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+    </li>
+    <% else %>
+    <li class="nav-item">
+      <%= link_to "サインアップ", new_customer_registration_path %>
+    </li>
+    <li class="nav-item">
+      <%= link_to "ログイン", new_customer_session_path %>
+    </li>
+    <% end %>
+    </ul>
   </div>
-</div>
+</nav>
+
+
+<%= search_form_for @q do |f| %>
+  <div class="d-flex justify-content-center" style="padding: 50px 162px 0 0;">
+    <div style="padding: 0 22px 0 10px;"><%= f.select :address_start,
+    [["東京都千代田区"],
+    ["東京都中央区"],
+    ["東京都港区"],
+    ["東京都新宿区"],
+    ["東京都文京区"],
+    ["東京都台東区"],
+    ["東京都墨田区"],
+    ["東京都江東区"],
+    ["東京都品川区"],
+    ["東京都目黒区"],
+    ["東京都大田区"],
+    ["東京都世田谷区"],
+    ["東京都渋谷区"],
+    ["東京都中野区"],
+    ["東京都杉並区"],
+    ["東京都豊島区"],
+    ["東京都北区"],
+    ["東京都荒川区"],
+    ["東京都板橋区"],
+    ["東京都練馬区"],
+    ["東京都足立区"],
+    ["東京都葛飾区"],
+    ["東京都江戸川区"]], {include_blank: "物件住所"} %></div>
+
+  <%= f.select :floor_eq,
+  [["1R"],["1K"],["1DK"],["1LDK"],["2K"],["2DK"],["2LDK"],["3DK"],["3LDK"],["4DK"],["4LDK"],["5DK"],["5LDK"]], {include_blank: "間取り"} %>
+  </div>
+
+  <div class="d-flex justify-content-center pt-3">
+    <div style="padding-right: 15px;"><%= f.number_field :price_gteq, class: "form-control-sm", :placeholder => "賃料下限(半角数字)" %></div> 〜
+    <div style="padding-left: 15px;"><%= f.number_field :price_lteq, class: "form-control-sm", :placeholder => "賃料上限(半角数字)" %></div>
+  </div>
+  <div class="d-flex justify-content-center pt-3">
+    <%= f.search_field :name_or_info_or_address_or_floor_cont, :placeholder => "フリーワード", :size => "46x5" %>
+  </div>
+
+  <div class="d-flex justify-content-center" style="padding-top: 80px;">
+    <%= f.submit "検索", class: "search" %>
+  </div>
+<% end %>
+
+<div class="new">
+  <div class="row justify-content-center p-5" style="color: white; font-weight: bold;">
+    <h1>N e w</h1>
+  </div>
+
+  <div class="container mb-5">
+    <div id="example-2" class="carousel slide" data-ride="carousel" style="width:100%">
+      <div class="carousel-inner">
+
+        <%= render "article", estates: @estates %>
+
+        <a class="carousel-control-prev" href="#example-2" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#example-2" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 
 <%= render "customers/customers/footer" %>
