--- a/app/views/customers/estates/finish.html.erb
+++ b/app/views/customers/estates/finish.html.erb
@@ -1,4 +1,10 @@
 <%= render "customers/customers/header" %>
-<h1>お問い合わせ</h1>
-<h1>ありがとうございました</h1>
+<div class="container">
+  <div class="row justify-content-center" style=" padding-top: 100px; font-weight: bold; font-size: 45px;">
+    お問い合わせ
+  </div>
+  <div class="row justify-content-center" style="font-weight: bold; font-size: 45px;">
+    ありがとうございました。
+  </div>
+</div>
 <%= render "customers/customers/footer" %>
