--- a/app/views/customers/customers/_footer.html.erb
+++ b/app/views/customers/customers/_footer.html.erb
@@ -1,18 +1,22 @@
-<footer>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" style="padding: 20px 0 20px 0" href="/"><%= image_tag('logo.jpg') %></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <%= link_to "トップ", root_path, data: {"turbolinks" => false}, class: "btn-sm btn-outline-light", :style=>"font-size: 20px; text-decoration: none;" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "物件一覧", estates_path, class: "btn-sm btn-outline-light", :style=>"font-size: 20px; text-decoration: none;" %>
-        </li>
-      </ul>
+<footer class="footer" style="background-color: #18003E;">
+  <div class="pos-f-t">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="p-1">
+          <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <%= link_to "トップ", root_path, data: {"turbolinks" => false}, class: "btn-sm btn-outline-light", :style=>"font-size: 20px; text-decoration: none;" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "物件一覧", estates_path, class: "btn-sm btn-outline-light", :style=>"font-size: 20px; text-decoration: none;" %>
+          </li>
+          </ul>
+      </div>
     </div>
-  </nav>
+      <nav class="navbar navbar-dark">
+          <a class="navbar-brand pr-5" style="padding: 20px 0 20px 0" href="/"><%= image_tag('logo.jpg') %></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon navbar justify-content-end"></span>
+        </button>
+      </nav>
+  </div>
 </footer>
