--- a/app/views/customers/customers/_header.html.erb
+++ b/app/views/customers/customers/_header.html.erb
@@ -9,17 +9,17 @@
       <ul class="navbar-nav">
       <% if customer_signed_in? %>
       <li class="nav-item">
-        <%= link_to "マイページ", customers_path %>
+        <%= link_to "マイページ", customers_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
       </li>
       <% else %>
       <li class="nav-item">
-        <%= link_to "サインアップ", new_customer_registration_path %>
+        <%= link_to "サインアップ", new_customer_registration_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
       </li>
       <li class="nav-item">
-        <%= link_to "ログイン", new_customer_session_path %>
+        <%= link_to "ログイン", new_customer_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
       </li>
       <% end %>
       </ul>
