--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -1,32 +1,37 @@
-<nav class="navbar navbar-expand-xs navbar-light">
-  <a class="navbar-brand justify-content-center" style="padding: 50px 0 0 520px;" href="/"><%= image_tag('logo1.jpg') %></a>
-  <button class="navbar-toggler" style="margin-bottom: 150px;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar justify-content-end navbar-expand-xs navbar-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
     <% if customer_signed_in? %>
     <li class="nav-item">
-      <%= link_to "マイページ", customers_path %>
+      <%= link_to "マイページ", customers_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
     </li>
     <li class="nav-item">
-      <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+      <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
     </li>
     <% else %>
     <li class="nav-item">
-      <%= link_to "サインアップ", new_customer_registration_path %>
+      <%= link_to "サインアップ", new_customer_registration_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
     </li>
     <li class="nav-item">
-      <%= link_to "ログイン", new_customer_session_path %>
+      <%= link_to "ログイン", new_customer_session_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
     </li>
     <% end %>
     </ul>
   </div>
 </nav>
-
+<div class="container">
+  <div class="row justify-content-center" >
+<div class="top col-4">
+  <%= link_to image_tag("logo1.jpg"), root_path %>
+</div>
+</div>
+</div>
 
 <%= search_form_for @q do |f| %>
-  <div class="d-flex justify-content-center" style="padding: 50px 162px 0 0;">
+  <div class="d-flex justify-content-center" style="padding: 80px 162px 0 0;">
     <div style="padding: 0 22px 0 10px;"><%= f.select :address_start,
     [["東京都千代田区"],
     ["東京都中央区"],
@@ -61,7 +66,7 @@
     <div style="padding-left: 15px;"><%= f.number_field :price_lteq, class: "form-control-sm", :placeholder => "賃料上限(半角数字)" %></div>
   </div>
   <div class="d-flex justify-content-center pt-3">
-    <%= f.search_field :name_or_info_or_address_or_floor_cont, :placeholder => "フリーワード", :size => "46x5" %>
+    <%= f.search_field :name_or_info_or_address_or_floor_cont, :placeholder => "フリーワード", :size => "46" %>
   </div>
 
   <div class="d-flex justify-content-center" style="padding-top: 80px;">
@@ -69,23 +74,25 @@
   </div>
 <% end %>
 
-<div class="new">
+<div class="pb-5" style="margin-top: 100px; background-color: #EB9FEF;">
   <div class="row justify-content-center p-5" style="color: white; font-weight: bold;">
-    <h1>N e w</h1>
+    <div class="text" style="font-size: 60px;">
+      <div class>N e w</div>
+    </div>
   </div>
 
   <div class="container mb-5">
-    <div id="example-2" class="carousel slide" data-ride="carousel" style="width:100%">
-      <div class="carousel-inner">
+    <div id="example-3" class="carousel slide" data-ride="carousel" style="width:100%">
+      <div class="carousel-inner text-center">
 
         <%= render "article", estates: @estates %>
 
-        <a class="carousel-control-prev" href="#example-2" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <a class="carousel-control-prev justify-content-start" href="#example-3" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#example-2" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <a class="carousel-control-next justify-content-end" href="#example-3" role="button" data-slide="next">
+          <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
