--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -1,27 +1,25 @@
 <%= render "customers/customers/header" %>
-<h2><%= current_customer.name %>さんのマイページ編集画面</h2>
-<div class="row-2">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "customers/shared/error_messages", resource: resource %>
+<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">マイページ編集</div>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= render "customers/shared/error_messages", resource: resource %>
 
-    <div class="col-12">
-      <div class="card">
-        <div class="card-body">
-          <div class="field">
-            <p><%= f.label :お名前 %>　<%= f.text_field :name %></p>
-          </div>
-          <div class="field">
-            <p><%= f.label :メールアドレス %>　<%= f.email_field :email %></p>
-          <div class="field">
-            <p><%= f.label :電話番号 %>　<%= f.text_field :phone_number %></p>
-          </div>
-          <div class="actions">
-            <%= f.submit "保存" %>
-          </div>
-        </div>
+  <div class="container">
+    <div class="card" style="margin-bottom: 150px;">
+      <div class="row pt-5 pb-4">
+        <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :お名前 %></div>
+        <div class="col-7" style="font-size: 25px;"><%= f.text_field :name, :size => "50" %></div>
+      </div>
+      <div class="row pb-4">
+        <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :メールアドレス %></div>
+        <div class="col-7" style="font-size: 25px;"><%= f.email_field :email, :size => "50" %></div>
+      </div>
+      <div class="row" style="padding-bottom: 70px;">
+        <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :電話番号 %></div>
+        <div class="col-7" style="font-size: 25px;"><%= f.text_field :phone_number, :size => "50" %></div>
+      </div>
+      <div class="row justify-content-center pb-5"><%= f.submit "保存", class: "search" %>
       </div>
     </div>
-  <% end %>
-</div>
-<%= link_to "Back", :back %>
+  </div>
+<% end %>
 <%= render "customers/customers/footer" %>
