--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,36 +1,54 @@
 <%= render "customers/customers/header" %>
 
-<h2>会員登録</h2>
+<div class="text-center pt-5 pb-5" style="font-size: 40px;">会員登録</div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :お名前 %><br />
-    <%= f.text_field :name, autofocus: true, placeholder:"お名前" %>
-  </div>
-  <div class="field">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, placeholder:"メールアドレス" %>
-  </div>
-  <div class="field">
-    <%= f.label :電話番号 %><br />
-    <%= f.text_field :phone_number, placeholder:"電話番号" %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", placeholder:"パスワード" %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"パスワード（確認）" %>
-  </div>
-  <div class="actions">
-    <%= f.submit "登録" %>
+  <div class="container">
+    <div class="row pb-4">
+      <div class="col-4 text-right">
+        <%= f.label :お名前 %>
+      </div>
+      <div class="col-7">
+        <%= f.text_field :name, autofocus: true, placeholder:"お名前", :size => "50" %>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-4 text-right">
+        <%= f.label :メールアドレス %>
+      </div>
+      <div class="col-7">
+        <%= f.email_field :email, placeholder:"メールアドレス", :size => "50" %>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-4 text-right">
+        <%= f.label :電話番号 %>
+      </div>
+      <div class="col-7">
+        <%= f.text_field :phone_number, placeholder:"電話番号", :size => "50" %>
+      </div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-4 text-right">
+        <%= f.label :パスワード %>
+      </div>
+      <div class="col-7">
+        <%= f.password_field :password, autocomplete: "new-password", placeholder:"パスワード", :size => "50" %>
+      </div>
+    </div>
+    <div class="row" style="padding-bottom: 70px;">
+      <div class="col-4 text-right">
+        <%= f.label :"パスワード(確認)" %>
+      </div>
+      <div class="col-7">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"パスワード（確認）", :size => "50" %>
+      </div>
+    </div>
+    <div class="row justify-content-center" style="padding-bottom: 120px;">
+      <%= f.submit "登録", class: "search" %>
+    </div>
   </div>
 <% end %>
 
-<%= render "customers/shared/links" %>
 <%= render "customers/customers/footer" %>
